# zipapp-utils

./: .bumpversion.cfg  CHANGELOG.md  README.md  pyproject.toml
zipapp_utils/: __init__.py  api.py  arg_handlers.py  cli.py  config.py  filters.py  parsers_util.py  templates.py  utils.py
zipapp_utils/templates/: __main__.jinja.py  bundle_and_run_pyz.jinja.sh
